Fix flexbox wrap

--- a/mainpages/static/styles/main.css
+++ b/mainpages/static/styles/main.css
@@ -8,7 +8,7 @@
 * @Author: sean-dooher
 * @Date:   2017-07-29 14:11:10
 * @Last Modified by:   sean-dooher
-* @Last Modified time: 2018-03-06 15:00:21
+* @Last Modified time: 2018-03-06 15:17:28
 */
 html, body, div, span, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -175,7 +175,7 @@ body::after{
 }
 
 #main-content {
-	width: 1000px;
+	width: 900px;
 	margin: 0 auto;
 }
 
@@ -203,6 +203,8 @@ section {
 .project-content {
 	display: flex;
 	align-items: center;
+	flex-wrap: wrap;
+	justify-content: center;
 }
 
 .project-image {
@@ -215,7 +217,7 @@ section {
 }
 
 .project-info {
-	max-width: 550px;
+	max-width: 450px;
 	margin-left: 15px;
 	display: inline-block;
 	text-align: left;
@@ -422,7 +424,7 @@ form textarea
 }
 
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 900px) {
 	nav {
 		height: 100vh;
 		width: 0;
@@ -439,7 +441,7 @@ form textarea
 
 	section, #main-content {
 		width: 80%;
-		min-width: 300px;
+		min-width: 400px;
 	}
 
 	section {
@@ -458,6 +460,10 @@ form textarea
 
 	.sidebar {
 		width: 100%;
+	}
+	
+	.project-image img {
+		max-width: 400px;
 	}
 
 	.g-recaptcha {
